RESOLVED FIXED76101
Assertion failure in JSC::allocateCell trying to allocate a JSString
https://bugs.webkit.org/show_bug.cgi?id=76101
Summary Assertion failure in JSC::allocateCell trying to allocate a JSString
Anders Carlsson
Reported 2012-01-11 13:58:03 PST
Assertion failure in JSC::allocateCell trying to allocate a JSString
Attachments
Patch (3.32 KB, patch)
2012-01-11 14:00 PST, Anders Carlsson
aroben: review+
Anders Carlsson
Comment 1 2012-01-11 14:00:27 PST
Anders Carlsson
Comment 2 2012-01-11 14:01:48 PST
Geoffrey Garen
Comment 3 2012-01-11 14:19:44 PST
Note You need to log in before you can comment on or make changes to this bug.