Assertion failure in JSC::allocateCell trying to allocate a JSString https://bugs.webkit.org/show_bug.cgi?id=76101

Reviewed by Adam Roben.

Remove the ExecutableBase::s_info and JSString::s_info static member variables  from the .def file and
export them explicitly using the JS_EXPORTDATA macro.

member variables explicitly using
* JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.def:
* runtime/Executable.h:
* runtime/JSString.h:

Canonical link: https://commits.webkit.org/92914@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104744 268f45cc-cd09-0410-ab3c-d52691b4dbfc